--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Twitter Sentiment</title>
+    <link rel="stylesheet" type="text/css" href="./static/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-    <p>"Hello World"</p> 
+    <h1>TWITTER SENTIMENT ANALYSIS</h1>
 </body>
 </html>
