--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,6 @@ html {
     position: absolute;
     min-height: 50%;
     /* border-radius: 25px; */
-    background-color: royalblue;
+    background-color: #1DA1F2;
     
   }
