--- a/templates/home.html
+++ b/templates/home.html
@@ -21,6 +21,7 @@
             <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Sentiment
             </a>
+            <a class><img class="w-100" src="Visualizations/bird.png" alt=""></a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="WebVisualizations/Max_temp.html">Questions</a></li>
               <li><a class="dropdown-item" href="WebVisualizations/Humidity.html">Extractions</a></li>
@@ -39,12 +40,14 @@
     </div>
   </nav>  
 
-  <div class="container mt-4">
+  <div class="container">
     <div class="row">
       <div class="col-md-8 bg-white">
         <h1 class="display-4 text-info" style="font-style: oblique;">Twitter Sentiment</h1>
         <hr>
-        <img src="assets/images/Fig1.png" alt="" class="w-50 float-start me-4">
+        <p><img class="content-img" src="Visualizations/bird.png" /> </p>
+        <!-- <div class="col-md-4"><img class= "content-img"style="width:100%"src="./Visualizations/bird.png" alt=""></div> -->
+       
         <p>The data that was provided.....</p>
         <p>After accessing the dataset, using Matplotlib to plot the numerous trends that each weather factor had vs. latitude! This site navigates through different visualations, comparision and analysis of the data. </p>
       </div>
@@ -54,7 +57,7 @@
         <hr>
         <div class="row">
           <span class= "PublishHeader-logo Icon Icon--twitter"></span>
-          <div class="col-md-6"><a href="WebVisualizations/Max_temp.html"><img class="w-100" src="assets/images/Fig1.png" alt=""></a></div>
+          <div class="col-md-6"><a href="Visualizations/bird.png"><img class="w-100" src="Visualizations/bird.png" alt=""></a></div>
           <div class="col-md-6"><a href="WebVisualizations/Humidity.html"><img class="w-100" src="assets/images/Fig2.png" alt=""></a></div>
           <div class="col-md-6"><a href="WebVisualizations/Cloudiness.html"><img class="w-100" src="assets/images/Fig3.png" alt=""></a></div>
           <div class="col-md-6"><a href="WebVisualizations/WindSpeed.html"><img class="w-100" src="assets/images/Fig4.png" alt=""></a></div>
