adding updated files

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
 <body style='background-color:#1DA1F2'>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
+      <a class><img width="100" height="100" class="content-img" src="/Visualizations/bird.png" alt=""></a>
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,7 +22,7 @@
             <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Sentiment
             </a>
-            <a class><img class="w-100" src="Visualizations/bird.png" alt=""></a>
+            
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="WebVisualizations/Max_temp.html">Questions</a></li>
               <li><a class="dropdown-item" href="WebVisualizations/Humidity.html">Extractions</a></li>
@@ -45,7 +46,7 @@
       <div class="col-md-8 bg-white">
         <h1 class="display-4 text-info" style="font-style: oblique;">Twitter Sentiment</h1>
         <hr>
-        <p><img class="content-img" src="Visualizations/bird.png" /> </p>
+        <p><img class="content-img" src="Visualizations/bird.png" alt=""/> </p>
         <!-- <div class="col-md-4"><img class= "content-img"style="width:100%"src="./Visualizations/bird.png" alt=""></div> -->
        
         <p>The data that was provided.....</p>
