--- a/templates/Intro.html
+++ b/templates/Intro.html
@@ -17,20 +17,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
          
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Sentiment
-            </a>
-            
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/Visualizations/Intro.html">Question</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
+          
            
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="WebVisualizations/Data.html">Data</a>
+            <a class="nav-link active" href="/templates/home.html">Home</a>
           </li>
         </ul>
       </div>
@@ -52,13 +43,7 @@
       <div class="col-md-4 bg-white">
         <h1 class="display-4 text-info"></h1>
         <hr>
-        <div class="row">
-          
-          <div class="col-md-6"><a href="templates/Intro.html"><img class="w-100" src="../Visualizations/bird.png" alt=""></a></div>
-          <div class="col-md-6"><a href="WebVisualizations/Humidity.html"><img class="w-100" src="assets/images/Fig2.png" alt=""></a></div>
-          <div class="col-md-6"><a href="WebVisualizations/Cloudiness.html"><img class="w-100" src="assets/images/Fig3.png" alt=""></a></div>
-          <div class="col-md-6"><a href="WebVisualizations/WindSpeed.html"><img class="w-100" src="assets/images/Fig4.png" alt=""></a></div>
-        </div>
+       
       </div>
     </div>
   </div>
