--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
            
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="WebVisualizations/Data.html">Data</a>
+            <a class="nav-link active" href="/templates/data.html">Data</a>
           </li>
         </ul>
       </div>
