--- a/templates/data.html
+++ b/templates/data.html
@@ -5,7 +5,7 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Top Hashtags in March </title>
+  <title>Most tweeted words </title>
 </head>
 <body style='background-color:#1DA1F2'>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,10 +18,6 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
          
           
-            
-           
-          </li>
-          <li class="nav-item">
            
           </li>
           <li class="nav-item">
@@ -35,19 +31,19 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 bg-white">
-        <h1 class="display-4 text-info" style="font-style: oblique;">Most Tweeted words</h1>
+        <h1 class="display-4 text-info" style="font-style: oblique;">Data</h1>
         <hr>
-        <p><img class="content-img" src="/Visualizations/hashtag.png" /> </p>
+        <p><img class="content-img" src="/output_data/words.csv" /> </p>
         <!-- <div class="col-md-4"><img class= "content-img"style="width:100%"src="./Visualizations/bird.png" alt=""></div> -->
        
         <p>The data that was provided.....</p>
         <p>After accessing the dataset, using Matplotlib to plot the numerous trends that each weather factor had vs. latitude! This site navigates through different visualations, comparision and analysis of the data. </p>
       </div>
 
-      <div class="col-md-0 bg-white">
+      <div class="col-md-4 bg-white">
         <h1 class="display-4 text-info"></h1>
         <hr>
-        
-        
+       
+      </div>
     </div>
   </div>
