--- a/templates/home.html
+++ b/templates/home.html
@@ -52,8 +52,8 @@
           <span class= "PublishHeader-logo Icon Icon--twitter"></span>
           <div class="col-md-6"><a href="/templates/Intro.html"><img class="w-100" src="/Visualizations/image.png" alt=""></a></div>
           <div class="col-md-6"><a href="/templates/Hashtag.html"><img class="w-100" src="/Visualizations/hashtag.png" alt=""></a></div>
-          <div class="col-md-6"><a href="WebVisualizations/Cloudiness.html"><img class="w-100" src="assets/images/Fig3.png" alt=""></a></div>
-          <div class="col-md-6"><a href="WebVisualizations/WindSpeed.html"><img class="w-100" src="assets/images/Fig4.png" alt=""></a></div>
+          <div class="col-md-6"><a href="/templates/tweet_chart.html"><img class="w-100" src="/Visualizations/hashtag.png" alt=""></a></div>
+          <!-- <div class="col-md-6"><a href="WebVisualizations/WindSpeed.html"><img class="w-100" src="assets/images/Fig4.png" alt=""></a></div> -->
         </div>
       </div>
     </div>
