--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Twitter Sentiment </title>
 </head>
+
+
+
+
+
 <body style='background-color:#1DA1F2'>
+  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       
@@ -41,7 +47,7 @@
         <!-- <div class="col-md-4"><img class= "content-img"style="width:100%"src="./Visualizations/bird.png" alt=""></div> -->
        
         <p>Hypothesis</p>
-        <p> What are the top tweets tweeted on Mondays? </p>
+        <p1> What are the top tweets tweeted on Mondays? </p1>
         <p2>What hashtags tweeted on Monday's?</p2>
       </div>
 
